remove animation from #popbox to fix now playing dropdown z-index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -39,8 +39,6 @@ nav {
 section {
   overflow: auto;
   .popbox {
-    position: relative;
-    z-index: 10;
     top: 20px;
   }
 }
